--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <!-- Video Preview -->
                     <div class="image-container">
                         <div class="video-wrapper">
-                            <a class="popup-youtube" href="https://youtu.be/04v2ODsmtIs" data-effect="fadeIn">
+                            <a class="popup-youtube" href="https://www.youtube.com/watch?v=04v2ODsmtIs" data-effect="fadeIn">
                                 <img class="img-fluid" src="images/header-lens.png" alt="alternative">
                                 <span class="video-play-button">
                                     <span></span>
