--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="language" content="english">
 
   <meta property="og:title" content="Lens | The Kubernetes IDE"/>
+  <meta property="og:type" content="website" />
   <meta property="og:description" content="Lens IDE for Kubernetes. The only system you’ll ever need to take control of your Kubernetes clusters. It's open source and free. Download it today!" />
   <meta property="og:image" content="https://k8slens.dev/images/lens-og.png" />
   <meta property="og:url" content="https://k8slens.dev/" />
