--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
   <meta name="msapplication-TileColor" content="#d1d2d3">
   <meta name="msapplication-config" content="images/favicon/browserconfig.xml?v=eEv4bpe534">
   <meta name="theme-color" content="#000000">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159377374-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159377374-2');
+  </script>
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
